# string-calculator-kata

./: Cargo.toml  README.md
bash/: string_calculator.sh
src/: lib.rs  main.rs
